--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -25,7 +25,7 @@
 
 
 
-
+/*   Blur navbar   */
 #nav-bar:hover:not([urlbar-exceeds-toolbar-bounds]), 
 #nav-bar:focus-within:not([urlbar-exceeds-toolbar-bounds]),
 #nav-bar[customizing],
@@ -36,11 +36,9 @@
 
 
 /*   Auto hide sidebar   */
-#sidebar-header {display:none}
-
 #sidebar-box:not([hidden]) {
   overflow: hidden;
-  height: calc(100% - 10px);
+  height: 100%;
   position: fixed;
   max-width: 1px;
   display: block;
@@ -48,13 +46,23 @@
   z-index: 1;
   opacity: 0}
 
-#sidebar-box:hover {
+@media(-moz-windows-default-theme) {
+  [sizemode=maximized] #sidebar-box {height: calc(100% - 10px)}
+  [sizemode=normal] #sidebar-box {height: calc(100% - 4px)}
+}
+
+#sidebar-box:not([hidden]):hover  /*To disable auto-hide sidebar, you need to comment out ":hover" */ {
   max-width: 100%;
   opacity: 1}
 
 #sidebar {
   width: 280px !important;
   height: 100%}
+
+
+#sidebar-header,
+.sidebar-splitter
+  {display:none}
 
 
 
@@ -187,11 +195,12 @@ menupopup[needsgutter] menuitem:not([checked="true"],[icon], .menuitem-iconic) {
 
 #statuspanel-label {
   border: 0 !important;
+  border-top-right-radius: 3px;
   backdrop-filter: blur(32px) saturate(200%);
   background-color: #fff8 !important;
   color: #000 !important}
 
-#main-window[lwthemetextcolor="bright"] #statuspanel-label {
+[lwthemetextcolor="bright"] #statuspanel-label {
   background-color: #0008 !important;
   color: #eee !important}
 
@@ -212,7 +221,6 @@ menupopup[needsgutter] menuitem:not([checked="true"],[icon], .menuitem-iconic) {
   --menu-disabled-color: var(--panel-disabled-color) !important;
   --menu-border-color: var(--arrowpanel-border-color) !important;
 }
-.menu-right {fill-opacity: .6 !important}
 
 
 
@@ -220,7 +228,7 @@ menupopup[needsgutter] menuitem:not([checked="true"],[icon], .menuitem-iconic) {
 * {
   --toolbarbutton-active-background: var(--toolbarbutton-hover-background);
   --urlbar-box-active-bgcolor: var(--urlbar-box-hover-bgcolor);
-  --panelview-toolbarbutton-active-bgcolor: var(--panelview-toolbarbutton-hover-bgcolor);
+  --panelview-toolbarbutton-active-bgcolor: var(--panelview-toolbarbutton-hover-bgcolor);/*old*/
   --button-active-bgcolor: var(--button-hover-bgcolor);
   --panel-banner-item-active-bgcolor: var(--panel-banner-item-hover-bgcolor);
   --panel-item-active-bgcolor: var(--panel-item-hover-bgcolor);
@@ -241,7 +249,7 @@ panel, menupopup {opacity: .98 !important}
 
 
 /*   Default theme   */
-#main-window[lwtheme-mozlightdark] * {
+[lwtheme-mozlightdark] * {
   --background:  #121215;
   --color:       #e8e8e9;
   --nav:         color-mix(in srgb, var(--background) 87%, transparent);
@@ -249,18 +257,22 @@ panel, menupopup {opacity: .98 !important}
   --2:           color-mix(in srgb, var(--color) 6%, transparent);
   --3:           color-mix(in srgb, var(--color) 10%, transparent);
   
+  --arrowpanel-background: var(--background);
+  
+  --toolbarbutton-icon-fill: var(--color);
+  --toolbar-color: var(--color);
+  --lwt-toolbar-field-color: var(--color);
+  --lwt-toolbar-field-focus-color: var(--color);
+  --arrowpanel-color: var(--color);
+  
   --lwt-accent-color: var(--nav);
   --toolbar-bgcolor: var(--nav);
   --lwt-toolbar-field-focus: var(--nav);
-  
-  --arrowpanel-background: var(--background);
   
   --urlbar-box-bgcolor: var(--1);
   --urlbar-box-focus-bgcolor: var(--1);
   --button-bgcolor: var(--1);
   --panel-banner-item-background-color: var(--1);
-  
-  --zoom-controls-bgcolor: transparent;
   
   --arrowpanel-border-color: var(--2);
   --panel-separator-color: var(--2);
@@ -276,21 +288,33 @@ panel, menupopup {opacity: .98 !important}
   
   --autocomplete-popup-highlight-background: var(--3);
   
-  --toolbarbutton-icon-fill: var(--color);
-  --toolbar-color: var(--color);
-  --lwt-toolbar-field-color: var(--color);
-  --lwt-toolbar-field-focus-color: var(--color);
-  --arrowpanel-color: var(--color);
+  --zoom-controls-bgcolor: transparent;
 }
 
-#main-window[lwtheme-mozlightdark]:not([lwthemetextcolor="bright"]) * {
+[lwtheme-mozlightdark]:not([lwthemetextcolor="bright"]) * {
   --background:  #fcfcfd;
   --color:       #000005;
 }
 
 
-#main-window[lwtheme-mozlightdark] tooltip {
+
+[lwtheme-mozlightdark] tooltip {
   -moz-appearance: none !important;
   background-color: var(--background) !important;
   border: 1px solid var(--3) !important;
   color: var(--color) !important}
+
+
+
+/*   Dialog   */   
+* {--in-content-page-background: #17171A !important} /* Disable when using light theme. Can't isolate */
+
+#window-modal-dialog {--chrome-offset: 20px !important}
+
+
+
+/*   Make borders not bright for third-party themes   */
+:not([lwtheme-mozlightdark]) * {
+  --menu-border-color: color-mix(in srgb, var(--arrowpanel-background) 50%, var(--panel-item-hover-bgcolor));
+  --arrowpanel-border-color: color-mix(in srgb, var(--arrowpanel-background) 50%, var(--panel-item-hover-bgcolor));
+}
