--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -51,7 +51,7 @@
   [sizemode=normal] #sidebar-box {height: calc(100% - 4px)}
 }
 
-#sidebar-box:not([hidden]):hover /* To disable auto-hide sidebar, you need to comment out ":hover" */ {
+#sidebar-box:not([hidden]):hover {
   max-width: 100%;
   opacity: 1}
 
@@ -60,9 +60,15 @@
   height: 100%}
 
 
-#sidebar-header,
-.sidebar-splitter
-  {display:none}
+
+/*   Disable auto hide sidebar   
+#sidebar-box:not([hidden]) {max-width: 100%; opacity: 1}
+#appcontent {margin-left: 300px}
+*/
+
+
+#sidebar-header {display:none}
+.sidebar-splitter {border-color: transparent !important}
 
 
 
@@ -137,18 +143,6 @@ menupopup[needsgutter] menuitem:not([checked="true"],[icon], .menuitem-iconic) {
   box-shadow: none !important;
   outline: none !important}
 
-#tracking-protection-icon-container:hover,
-#tracking-protection-icon-container[open],
-.identity-box-button:hover,
-.identity-box-button[open],
-#identity-icon-box[open],
-#identity-permission-box[open],
-#notification-popup-box:hover,
-#notification-popup-box[open],
-.urlbar-page-action:not([disabled]):hover,
-.urlbar-page-action:not([disabled])[open] {
-	background-color: var(--toolbarbutton-hover-background) !important}
-
 #identity-icon-box {max-width: calc(50px + 10em) !important}
 
 .identity-box-button:not(:hover) {background-color: transparent !important}
@@ -165,7 +159,7 @@ menupopup[needsgutter] menuitem:not([checked="true"],[icon], .menuitem-iconic) {
 #urlbar[breakout][breakout-extend][open] > #urlbar-background,
 .urlbarView-row[type="switchtab"]:hover .urlbarView-action,
 .urlbarView-row[type="switchtab"][aria-selected="true"] .urlbarView-action {
-  background-color: color-mix(in srgb, var(--lwt-toolbar-field-focus) 85%, transparent) !important;
+  background-color: color-mix(in srgb, var(--lwt-toolbar-field-focus) /*85*/99%, transparent) !important;
   backdrop-filter: blur(32px) saturate(200%)}
 
 :root {--lwt-toolbar-field-focus: var(--toolbar-field-focus-background-color)}
@@ -195,12 +189,21 @@ menupopup[needsgutter] menuitem:not([checked="true"],[icon], .menuitem-iconic) {
   border: 0 !important;
   border-top-right-radius: 3px;
   backdrop-filter: blur(32px) saturate(200%);
-  background-color: #fff8 !important;
+  background-color: /*#fff8*/#fffc !important;
   color: #000 !important}
 
-[lwthemetextcolor="bright"] #statuspanel-label {
-  background-color: #0008 !important;
+[lwt-toolbar-field-focus-brighttext] #statuspanel-label {
+  background-color: /*#0008*/#000c !important;
   color: #eee !important}
+
+
+
+
+[lwt-toolbar-field-focus-brighttext] tooltip {
+  appearance: none;
+  background-color: #121215;
+  border: 1px solid #333;
+  color: #e8e8e9}
 
 
 
@@ -234,9 +237,12 @@ menupopup[needsgutter] menuitem:not([checked="true"],[icon], .menuitem-iconic) {
 
 
 * {
+  --urlbar-box-hover-bgcolor: var(--toolbarbutton-hover-background) !important;
   --menuitem-disabled-hover-background-color: none;
   --panel-separator-zap-gradient: none;
   --panel-shortcut-color: color-mix(in srgb, var(--arrowpanel-color) 35%, var(--arrowpanel-background));
+  --zoom-controls-bgcolor: transparent;
+  --chrome-offset: 20px !important;
 }
 
 
@@ -245,11 +251,11 @@ panel, menupopup {opacity: .98 !important}
 
 
 
-/*   Default theme   */
-[lwtheme-mozlightdark] * {
+/*   Default theme in dark mode  */
+[lwt-default-theme-in-dark-mode] * {
   --background:  #121215;
   --color:       #e8e8e9;
-  --nav:         color-mix(in srgb, var(--background) 87%, transparent);
+  --nav:         color-mix(in srgb, var(--background) /*87*/99%, transparent);
   --1:           color-mix(in srgb, var(--color) 4%, transparent);
   --2:           color-mix(in srgb, var(--color) 6%, transparent);
   --3:           color-mix(in srgb, var(--color) 10%, transparent);
@@ -283,33 +289,16 @@ panel, menupopup {opacity: .98 !important}
   --toolbarbutton-hover-background: var(--2);
   
   --autocomplete-popup-highlight-background: var(--3);
-  
-  --zoom-controls-bgcolor: transparent;
-}
-
-[lwtheme-mozlightdark]:not([lwthemetextcolor="bright"]) * {
-  --background:  #fcfcfd;
-  --color:       #000005;
 }
 
 
 
-[lwtheme-mozlightdark] tooltip {
-  -moz-appearance: none !important;
-  background-color: var(--background) !important;
-  border: 1px solid var(--3) !important;
-  color: var(--color) !important}
+/*   Dialog background   
+* {--in-content-page-background: #17171A !important}
+*/
 
 
-
-/*   Dialog   */   
-* {--in-content-page-background: #17171A !important} /* Disable when using light theme. Can't isolate */
-
-#window-modal-dialog {--chrome-offset: 20px !important}
-
-
-
-/*   Make borders not bright for third-party themes   */
-!#main-window:not([lwtheme-mozlightdark]) * {
-  --panel-border-color: color-mix(in srgb, var(--arrowpanel-border-color) 30%, var(--arrowpanel-background)) !important;
-}
+/*   Make borders not bright for third-party themes   
+* {--panel-border-color: color-mix(in srgb, var(--arrowpanel-border-color) 30%, var(--arrowpanel-background)) !important}
+#urlbar[open] > #urlbar-background {border-color: color-mix(in srgb, var(--arrowpanel-border-color) 30%, var(--lwt-toolbar-field-focus)) !important}
+*/
