--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -207,19 +207,32 @@ menupopup[needsgutter] menuitem:not([checked="true"],[icon], .menuitem-iconic) {
   background-color: /*#fff8*/#fffc !important;
   color: #000 !important}
 
-[lwt-toolbar-field-focus-brighttext] #statuspanel-label {
-  background-color: /*#0008*/#000c !important;
-  color: #eee !important}
+#statuspanel[mirror] #statuspanel-label {
+  border-top-left-radius: 3px;
+  border-top-right-radius: 0}
+
+@media (prefers-color-scheme:dark), (prefers-color-scheme: no-preference) {
+  [lwthemetextcolor="dark"][lwt-popup-brighttext="true"] #statuspanel-label,
+  #main-window:not([lwthemetextcolor="dark"]) #statuspanel-label {
+    background-color: /*#0008*/#000c !important;
+    color: #eee !important}
+}
 
 
 
-
-[lwt-toolbar-field-focus-brighttext] tooltip {
+tooltip {
   appearance: none;
-  background-color: #121215;
-  border: 1px solid #333;
-  color: #e8e8e9}
+  background-color: #fff;
+  border: 1px solid #bbb;
+  color: #000}
 
+@media (prefers-color-scheme:dark), (prefers-color-scheme: no-preference) {
+  [lwthemetextcolor="dark"][lwt-popup-brighttext="true"] tooltip,
+  #main-window:not([lwthemetextcolor="dark"]) tooltip {
+    background-color: #121215;
+    border: 1px solid #333;
+    color: #e8e8e9}
+}
 
 
 
@@ -266,45 +279,47 @@ panel, menupopup {opacity: .98 !important}
 
 
 
-/*   Default theme in dark mode  */
-[lwt-default-theme-in-dark-mode] * {
-  --background:  #121215;
-  --color:       #e8e8e9;
-  --nav:         color-mix(in srgb, var(--background) /*87*/99%, transparent);
-  --1:           color-mix(in srgb, var(--color) 4%, transparent);
-  --2:           color-mix(in srgb, var(--color) 6%, transparent);
-  --3:           color-mix(in srgb, var(--color) 10%, transparent);
-  
-  --arrowpanel-background: var(--background);
-  
-  --toolbarbutton-icon-fill: var(--color);
-  --toolbar-color: var(--color);
-  --lwt-toolbar-field-color: var(--color);
-  --lwt-toolbar-field-focus-color: var(--color);
-  --arrowpanel-color: var(--color);
-  
-  --lwt-accent-color: var(--nav);
-  --toolbar-bgcolor: var(--nav);
-  --lwt-toolbar-field-focus: var(--nav);
-  
-  --urlbar-box-bgcolor: var(--1);
-  --urlbar-box-focus-bgcolor: var(--1);
-  --button-bgcolor: var(--1);
-  --panel-banner-item-background-color: var(--1);
-  
-  --arrowpanel-border-color: var(--2);
-  --panel-separator-color: var(--2);
-  --autocomplete-popup-separator-color: var(--2);
-  --autocomplete-popup-hover-background: var(--2);
-  --input-bgcolor: var(--2);
-  --panel-item-hover-bgcolor: var(--2);
-  --button-hover-bgcolor: var(--2);
-  --panel-banner-item-hover-bgcolor: var(--2);
-  --urlbar-box-hover-bgcolor: var(--2);
-  --toolbarbutton-hover-background: var(--2);
-  
-  --autocomplete-popup-highlight-background: var(--3);
-}
+/*   Auto theme in dark mode  */
+@media (prefers-color-scheme:dark), (prefers-color-scheme: no-preference) {
+  [lwt-default-theme-in-dark-mode] *,
+  [style="--lwt-accent-color: white; --lwt-text-color: rgba(0, 0, 0);"] * {
+    --background:  #121215;
+    --color:       #e8e8e9;
+    --nav:         color-mix(in srgb, var(--background) /*87*/99%, transparent);
+    --1:           color-mix(in srgb, var(--color) 4%, transparent);
+    --2:           color-mix(in srgb, var(--color) 6%, transparent);
+    --3:           color-mix(in srgb, var(--color) 10%, transparent);
+    
+    --arrowpanel-background: var(--background);
+    
+    --toolbarbutton-icon-fill: var(--color);
+    --toolbar-color: var(--color);
+    --lwt-toolbar-field-color: var(--color);
+    --lwt-toolbar-field-focus-color: var(--color);
+    --arrowpanel-color: var(--color);
+    
+    --lwt-accent-color: var(--nav);
+    --toolbar-bgcolor: var(--nav);
+    --lwt-toolbar-field-focus: var(--nav);
+    
+    --urlbar-box-bgcolor: var(--1);
+    --urlbar-box-focus-bgcolor: var(--1);
+    --button-bgcolor: var(--1);
+    --panel-banner-item-background-color: var(--1);
+    
+    --arrowpanel-border-color: var(--2);
+    --panel-separator-color: var(--2);
+    --autocomplete-popup-separator-color: var(--2);
+    --autocomplete-popup-hover-background: var(--2);
+    --input-bgcolor: var(--2);
+    --panel-item-hover-bgcolor: var(--2);
+    --button-hover-bgcolor: var(--2);
+    --panel-banner-item-hover-bgcolor: var(--2);
+    --urlbar-box-hover-bgcolor: var(--2);
+    --toolbarbutton-hover-background: var(--2);
+    
+    --autocomplete-popup-highlight-background: var(--3);
+}}
 
 
 
